k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pt-dh
spec:
  selector:
    app: pt-dh
  ports:
  - port: 80
    targetPort: 5000
    name: http
